external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/named_struct_middle_autocomplete.exp
warning[W10007]: issue with attribute value
  ┌─ tests/move_2024/ide_mode/named_struct_middle_autocomplete.move:1:9
  │
1 │ #[allow(ide_path_autocomplete)]
  │         ^^^^^^^^^^^^^^^^^^^^^ Unknown warning filter 'ide_path_autocomplete'
  │
  = This warning can be suppressed with '#[allow(bad_attribute_value)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03010]: unbound field
   ┌─ tests/move_2024/ide_mode/named_struct_middle_autocomplete.move:14:21
   │
14 │         let _tmp2 = _s.b.x;
   │                     ^^^^ Unbound field 'b' in 'a::m::B'

